--- a/src/main/java/com/github/mefi/jkuuza/gui/AppView.form
+++ b/src/main/java/com/github/mefi/jkuuza/gui/AppView.form
@@ -376,19 +376,11 @@
                             <DimensionLayout dim="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" attributes="0">
+                                      <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" attributes="0">
-                                              <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="jlbCrawlerResolvedQueriesCountLabel" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="jlbCrawlerOutstandingQueriesLabel" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="jlbCrawlerUnprocessedQueriesLabel" min="-2" max="-2" attributes="0"/>
-                                          </Group>
+                                          <Component id="jlbCrawlerResolvedQueriesCountLabel" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jlbCrawlerOutstandingQueriesLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jlbCrawlerUnprocessedQueriesLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -422,7 +414,7 @@
                                               <Component id="jlbCrawlerUnprocessedQueriesLabel" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
-                                      <EmptySpace pref="101" max="32767" attributes="0"/>
+                                      <EmptySpace pref="136" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                             </DimensionLayout>
